# LinkAutoPostAI

./: .codacy.yaml  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: huggingface-push.yaml  huggingface-test.yaml  social-media-post.yaml
src/: .env.dev  app.py  config.py  linkedin.py  llm.py
