[project]
name = "LinkAutoPostAI"
version = "0.1.0"
description = "Automated LinkedIn post generator powered by AI for seamless content scheduling and sharing."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.79.0",
    "load-dotenv>=0.1.0",
    "requests>=2.32.5",
    "types-requests>=2.32.4.20250913",
]

[tool.mypy]
disable_error_code = ["import-untyped"]
